--- a/cyber-events/public/index.html
+++ b/cyber-events/public/index.html
@@ -8,7 +8,8 @@
 		>
 		<meta name="theme-color" content="#000000">
 		<meta content="IE=Edge" http-equiv="X-UA-Compatible">
-		<title>VK Mini App Boilerplate</title>
+		<title>Cyber Events</title>
+		<link rel="shortcut icon" href="./LogoCyberEvents32.png" type="image/png">
 	</head>
 	<body>
 		<div id="root"></div>
